Renamed app to Nkwo Nnewi and created new firebase setups via CLI

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
 
 
     <application
-        android:label="medibrum"
+        android:label="nkwonnewiapp"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
