--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,24 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>823307041176-ao9frv5a25ebiimfstp79lnc214urhgj.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.823307041176-ao9frv5a25ebiimfstp79lnc214urhgj</string>
-	<key>ANDROID_CLIENT_ID</key>
-	<string>823307041176-qfcmju8p2mbqre4rl5kufhr7dhs9hs33.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDyypc4MyqBBneptEWpF17u3s7cu8X4wIY</string>
+	<string>AIzaSyA6PMg3BifsnWALrnF5JabvNvUhtP_C6ZQ</string>
 	<key>GCM_SENDER_ID</key>
-	<string>823307041176</string>
+	<string>179851089730</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.techfaculty.medibrum</string>
+	<string>com.techfaculty.nkwonnewiapp</string>
 	<key>PROJECT_ID</key>
-	<string>codingwitht-c6d0f</string>
+	<string>nkwo-nnewi-app</string>
 	<key>STORAGE_BUCKET</key>
-	<string>codingwitht-c6d0f.appspot.com</string>
+	<string>nkwo-nnewi-app.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:823307041176:ios:cef880e79df81b420653ed</string>
+	<string>1:179851089730:ios:3b69972f509d11e0351adb</string>
 </dict>
 </plist>
