--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "medibrum",
-    "short_name": "medibrum",
+    "name": "nkwonnewiapp",
+    "short_name": "nkwonnewiapp",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
