--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -2,7 +2,8 @@ plugins {
     id "com.android.application"
     id "kotlin-android"
     id "dev.flutter.flutter-gradle-plugin"
-    id 'com.google.gms.google-services' version '4.4.1' apply false
+    id 'com.google.gms.google-services'
+    id 'com.google.firebase.crashlytics' version '3.0.1' apply false
 }
 
 def localProperties = new Properties()
@@ -24,7 +25,7 @@ if (flutterVersionName == null) {
 }
 
 android {
-    namespace "com.techfaculty.medibrum"
+    namespace "com.techfaculty.nkwonnewiapp"
     compileSdkVersion 34
     ndkVersion flutter.ndkVersion
 
@@ -43,7 +44,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.techfaculty.medibrum"
+        applicationId "com.techfaculty.nkwonnewiapp"
         // You can update the following values to match your application needs.
         // For more information, see: https://docs.flutter.dev/deployment/android#reviewing-the-gradle-build-configuration.
         minSdkVersion 24
