--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: medibrum
+name: nkwonnewiapp
 description: A new Flutter project.
 
 publish_to: 'none'
@@ -49,6 +49,8 @@ dependencies:
   firebase_storage: ^11.5.1
   google_sign_in: ^6.1.6
   flutter_facebook_auth: ^6.0.2
+  firebase_crashlytics: ^3.5.7
+  firebase_analytics: ^10.10.7
 
     #--------------- ./ PACKAGES END ------------------#
 
