--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "medibrum" "\0"
+            VALUE "FileDescription", "nkwonnewiapp" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "medibrum" "\0"
+            VALUE "InternalName", "nkwonnewiapp" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2023 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "medibrum.exe" "\0"
-            VALUE "ProductName", "medibrum" "\0"
+            VALUE "OriginalFilename", "nkwonnewiapp.exe" "\0"
+            VALUE "ProductName", "nkwonnewiapp" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
