Latest commit. Changes to colors, few products etc.

--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -2,6 +2,12 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>CLIENT_ID</key>
+	<string>179851089730-ff4719fq56ck18dk7i160a0rk36a77uj.apps.googleusercontent.com</string>
+	<key>REVERSED_CLIENT_ID</key>
+	<string>com.googleusercontent.apps.179851089730-ff4719fq56ck18dk7i160a0rk36a77uj</string>
+	<key>ANDROID_CLIENT_ID</key>
+	<string>179851089730-o4ugd92jbof68fu2bqi1vbkkvjq9qtvo.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
 	<string>AIzaSyA6PMg3BifsnWALrnF5JabvNvUhtP_C6ZQ</string>
 	<key>GCM_SENDER_ID</key>
